Changes:
- Fixed inflector.yaml: now loads all models instead of trying only to load the sample "Pet" model.

- Fixed the broken swagger.yaml: "User" and "User/{id}" entries (yaml file is now valid).

- Some refactoring in UserController.

- Deleted sample classes "Category" and "Tag".

- Added authlevel as part of the DB.
